--- a/templates/payment_error.html
+++ b/templates/payment_error.html
@@ -29,7 +29,7 @@
             <div class="support-info">
                 <h3>Need Help?</h3>
                 <p>If you continue to experience issues, please contact our support team:</p>
-                <p>Email: <a href="mailto:support@fineprintsimplifier.com">support@fineprintsimplifier.com</a></p>
+                <p>Email: <a href="mailto:support@smallprintchecker.com">support@smallprintchecker.com</a></p>
                 <p>We'll help you get your Pro subscription activated.</p>
             </div>
         </div>
