--- a/templates/payment_success.html
+++ b/templates/payment_success.html
@@ -49,7 +49,7 @@
             {% endif %}
             
             <div class="support-info">
-                <p>Need help? Contact us at <a href="mailto:support@fineprintsimplifier.com">support@fineprintsimplifier.com</a></p>
+                <p>Need help? Contact us at <a href="mailto:support@smallprintchecker.com">support@smallprintchecker.com</a></p>
             </div>
         </div>
     </div>
