--- a/templates/subscription_management.html
+++ b/templates/subscription_management.html
@@ -135,7 +135,7 @@
                     <h3>Need Help?</h3>
                     <p>If you have questions about your subscription or need assistance, our support team is here to help.</p>
                     <div class="support-actions">
-                        <a href="mailto:support@fineprintsimplifier.com" class="btn-secondary">Contact Support</a>
+                        <a href="mailto:support@smallprintchecker.com" class="btn-secondary">Contact Support</a>
                         <a href="/profile" class="btn-secondary">Back to Profile</a>
                     </div>
                 </div>
@@ -514,7 +514,7 @@
                 The subscription management portal is currently being set up.
                 
                 For now, you can manage your subscription by:
-                • Contacting support at support@fineprintsimplifier.com
+                • Contacting support at support@smallprintchecker.com
                 • Visiting Stripe directly with your customer ID: ${userData?.stripe_customer_id || 'N/A'}
                 
                 We apologize for the inconvenience and are working to make this available soon.
